deployment/GKE-k8s-prod-scheduler.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: daily-exchange-scheduler-prod-deployment
  namespace: dailyexrates-8079-prod-01
  labels:
    app: daily-exchange-scheduler-prod-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: daily-exchange-scheduler-prod-app
  template:
    metadata:
      labels:
        app: daily-exchange-scheduler-prod-app
    spec:
      containers:
      - name: daily-exchange-scheduler-prod-app
        image: gcr.io/p-pm-do-8079/bloomberg-exchange-scheduler-service:870235
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        terminationMessagePath: /prod/termination-log
        terminationMessagePolicy: File
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 2
          periodSeconds: 3
          failureThreshold: 2
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 2
          periodSeconds: 3
          failureThreshold: 1
        resources:
          limits:
            memory: 2Gi
            cpu: 2
          requests:
            memory: 1Gi
            cpu: 1
      imagePullSecrets:
      - name: gcr-json-key
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
      - key: com.docker.ucp.manager
        operator: Exists
---
apiVersion: v1
kind: Service
metadata:
  name: daily-exchange-scheduler-prod-service
  namespace: dailyexrates-8079-prod-01
spec:
  selector:
    app: daily-exchange-scheduler-prod-app
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8080
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: daily-exchange-scheduler-prod-gateway
  namespace: dailyexrates-8079-prod-01
spec:
  gateways:
  - daily-exchange-rates-prod-gateway
  hosts:
  - facade.apigateway.it.slb.com
  http:
  - match:
    - uri:
        exact: /api/exchange-scheduler
    - uri:
        prefix: /api/exchange-scheduler/
    rewrite:
      uri: /
    route:
    - destination:
        host: daily-exchange-scheduler-prod-service
        port:
          number: 443
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: daily-exchange-scheduler-prod-gateway
  namespace: dailyexrates-8079-prod-01
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - facade.apigateway.it.slb.com
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - facade.apigateway.it.slb.com
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: slb-facade-apigateway-tls
      mode: SIMPLE
